2002-05-31  Hidetoshi Tajima <hidetoshi.tajima@sun.com>

	* Makefile.am: Update for #83627.

2002-05-31  Hidetoshi Tajima <hidetoshi.tajima@sun.com>

	* Makefile.am: Fix GNOMELOCALEDIR to point to correct
	place. Fixes #83627.

2002-05-21 Muktha <muktha.narayan@wipro.com>

	* Accessibility changes for gdialog
	Files changed : dialog.h dialog.c inputbox.c
			checklist.c guage.c

2002-04-25  Glynn Foster  <glynn.foster@sun.com>

	* gdialog.1: Remove the documentation for the
	password box until we decide if we add this 
	pre or post 2.0.

2002-04-24 John Fleck <jfleck@inkstain.net>

	* help/C/gdialog-C.omf
	updating OMF file to match that required by
	ScrollKeeper >= 0.3.8

2002-04-23  Satyajit Kanungo<satyajit.kanungo@wipro.com>

	* checklist.c, dialog.c, guage.c, inputbox.c,
	* menubox.c, msgbox.c, textbox.c, yesno.c: 
	Replace use of GtkCList in checklist with GtkTreeView 
	and GtkListStore, GtkDialog with GnomeDialog.

2002-04-22 John Fleck <jfleck@inkstain.net>

	* help/C/gdialog-C.omf
	updating omf file to match new ScrollKeeper DTD

2002-04-20 John Fleck <jfleck@inkstain.net>

	* help/C/gdialog.xml
	edits from Nicholas Curran

2002-04-12 Yogeesh MB <yogeeshappa.mathighatta@wipro.com>

        * dialog.c: Validating height and width of dialog box for text mode,  
	fixes bug#75100.		

2002-04-07 John Fleck <jfleck@inkstain.net>

	* help/C/gdialog-C.omf
	updating OMF file

2002-04-07 John Fleck <jfleck@inkstain.net>

	* help/C/gdialog.xml
	* help/C/figures/*.png
	updating docs for GNOME2 with new screenshots and 
	some rewriting of doc

2002-02-21 Senthilkumar Ramasamy <senthil.ramasamy@wipro.com>

	* gnome-utils/gdialog/dialog.c - gdialog - added a check to avoid 
	negative values & alphabets for the height & width arguments.

2002-03-16 David Westlund <daw@wlug.westbo.se>

	* /gnome-utils/gdialog/guage.c  The progressbar can be updated
	from stdin in gnome. Added the callback function
	callback_progress_bar

	* /gnome-utils/gdialog/dialog.h  Added the function