@@ -1,3 +1,8 @@
+2002-07-24  Samuel Stringham <sams@e-sa.com>
+
+	* checklist.c: accepts --seperate-output now. Fixes 
+	#71570.
+
 2002-05-31  Hidetoshi Tajima <hidetoshi.tajima@sun.com>
 
 	* Makefile.am: Update for #83627.
